# MPGHE

./: CMakeLists.txt  README.md
include/: mpghe.h
src/example/: test.cpp
src/lib/: common.h  debug.cpp  debug.h  mpghe.cpp  pattern.h  platform.cpp  platform.h  profile.cpp  profile.h
